--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@reduxjs/toolkit": "^2.2.7",
 		"bootstrap": "^5.3.3",
+		"i18next": "^23.12.2",
+		"i18next-browser-languagedetector": "^8.0.0",
+		"i18next-http-backend": "^2.5.2",
 		"react": "^18.3.1",
 		"react-bootstrap": "^2.10.4",
 		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.52.1",
+		"react-i18next": "^15.0.1",
+		"react-redux": "^9.1.2",
 		"react-router-dom": "^6.24.1",
 		"react-simple-wysiwyg": "^3.1.1",
 		"react-toastify": "^10.0.5"
